[gd_scene load_steps=17 format=3 uid="uid://c8uj0lav6l6k6"]

[ext_resource type="Script" path="res://root_map.gd" id="1_smulp"]
[ext_resource type="PackedScene" uid="uid://de0khhn6eljy8" path="res://Characters/MainCharacter.tscn" id="2_ursjo"]
[ext_resource type="PackedScene" uid="uid://bi6l5s07rvcrk" path="res://Characters/Enemigo.tscn" id="3_bl41b"]
[ext_resource type="PackedScene" uid="uid://ccmbjlei6mykn" path="res://cheese.tscn" id="4_d6dvr"]
[ext_resource type="Texture2D" uid="uid://g4t4hn01ouri" path="res://sprites/laberinto.png" id="5_fvqcx"]
[ext_resource type="Texture2D" uid="uid://cvw4aoth7iux7" path="res://sprites/square.png" id="6_sky4v"]
[ext_resource type="Texture2D" uid="uid://6h1ctximnarb" path="res://sprites/Blue.png" id="7_6anxr"]
[ext_resource type="Texture2D" uid="uid://dvm82r2rlp0up" path="res://sprites/Green.png" id="8_hd6ig"]
[ext_resource type="PackedScene" uid="uid://f107mlm5my6k" path="res://button.tscn" id="9_ikh3n"]
[ext_resource type="Texture2D" uid="uid://5okf4306lyu6" path="res://sprites/Red.png" id="9_kt1pi"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7oygp"]
resource_name = "Wall"
texture = ExtResource("6_sky4v")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jmdj4"]
resource_name = "No Physics"
texture = ExtResource("6_sky4v")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0sg1a"]
texture = ExtResource("7_6anxr")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vyjjg"]
resource_name = "Green"
texture = ExtResource("8_hd6ig")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d2mtt"]
texture = ExtResource("9_kt1pi")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_2bqh2"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_7oygp")
sources/1 = SubResource("TileSetAtlasSource_jmdj4")
sources/3 = SubResource("TileSetAtlasSource_vyjjg")
sources/2 = SubResource("TileSetAtlasSource_0sg1a")
sources/4 = SubResource("TileSetAtlasSource_d2mtt")

[node name="RootMap" type="Node2D"]
script = ExtResource("1_smulp")

[node name="Level1" type="Node2D" parent="."]

[node name="OriginalMap" type="Node2D" parent="Level1"]

[node name="EndWall" parent="Level1/OriginalMap" instance_placeholder="res://Maps/end_wall.tscn"]

[node name="Laberinto" type="Sprite2D" parent="Level1/OriginalMap"]
visible = false
position = Vector2(462, 328)
scale = Vector2(2.31628, 1.60748)
texture = ExtResource("5_fvqcx")

[node name="TileMap" type="TileMap" parent="Level1/OriginalMap"]
tile_set = SubResource("TileSet_2bqh2")
format = 2
layer_0/tile_data = PackedInt32Array(2621452, 0, 0, 2621453, 0, 0, 2621454, 0, 0, 2621455, 0, 0, 72, 0, 0, 65608, 0, 0, 131144, 0, 0, 196680, 0, 0, 262216, 0, 0, 327752, 0, 0, 393288, 0, 0, 458824, 0, 0, 524360, 0, 0, 589896, 0, 0, 655432, 0, 0, 720968, 0, 0, 786504, 0, 0, 852040, 0, 0, 917576, 0, 0, 983112, 0, 0, 1048648, 0, 0, 1114184, 0, 0, 1179720, 0, 0, 1245256, 0, 0, 1310792, 0, 0, 1376328, 0, 0, 1441864, 0, 0, 1507400, 0, 0, 1572936, 0, 0, 1638472, 0, 0, 1704008, 0, 0, 1769544, 0, 0, 1835080, 0, 0, 1900616, 0, 0, 1966152, 0, 0, 2031688, 0, 0, 2097224, 0, 0, 2162760, 0, 0, 2228296, 0, 0, 2293832, 0, 0, 2359368, 0, 0, 2424904, 0, 0, 2490440, 0, 0, 2555976, 0, 0, 2621512, 0, 0, 2621456, 0, 0, 2621457, 0, 0, 2621458, 0, 0, 2621459, 0, 0, 2621460, 0, 0, 2621461, 0, 0, 2621462, 0, 0, 2621463, 0, 0, 2621464, 0, 0, 2621465, 0, 0, 2621466, 0, 0, 2621467, 0, 0, 2621468, 0, 0, 2621469, 0, 0, 2621470, 0, 0, 2621471, 0, 0, 2621472, 0, 0, 2621473, 0, 0, 2621474, 0, 0, 2621475, 0, 0, 2621476, 0, 0, 2621477, 0, 0, 2621478, 0, 0, 2621479, 0, 0, 2621480, 0, 0, 2621481, 0, 0, 2621482, 0, 0, 2621483, 0, 0, 2621484, 0, 0, 2621485, 0, 0, 2621486, 0, 0, 2621487, 0, 0, 2621488, 0, 0, 2621489, 0, 0, 2621490, 0, 0, 2621491, 0, 0, 2621492, 0, 0, 2621493, 0, 0, 2621494, 0, 0, 2621495, 0, 0, 2621496, 0, 0, 2621497, 1, 0, 2621498, 0, 0, 2621499, 0, 0, 2621500, 0, 0, 2621501, 1, 0, 2621502, 1, 0, 2621503, 1, 0, 2621504, 1, 0, 2621505, 1, 0, 2621506, 1, 0, 2621507, 1, 0, 2621508, 1, 0, 2621509, 1, 0, 2621510, 1, 0, 2621511, 1, 0, 2424892, 0, 0, 2555963, 0, 0, 2555964, 0, 0, 327738, 0, 0, 393274, 0, 0, 458810, 0, 0, 524346, 0, 0, 589882, 0, 0, 655418, 0, 0, 720954, 0, 0, 786490, 0, 0, 852026, 0, 0, 917562, 0, 0, 983098, 0, 0, 1048634, 0, 0, 1114170, 0, 0, 1179706, 0, 0, 1245242, 0, 0, 1310778, 0, 0, 1376314, 0, 0, 1441850, 0, 0, 1507386, 0, 0, 1572922, 0, 0, 1638458, 0, 0, 1703994, 0, 0, 1769530, 0, 0, 1835066, 0, 0, 1900602, 0, 0, 1966138, 0, 0, 2031674, 0, 0, 2097210, 0, 0, 2162746, 0, 0, 2228282, 0, 0, 2293818, 0, 0, 2359354, 0, 0, 2424890, 0, 0, 2490426, 0, 0, 2555962, 0, 0, 327739, 0, 0, 393275, 0, 0, 458811, 0, 0, 524347, 0, 0, 589883, 0, 0, 655419, 0, 0, 720955, 0, 0, 786491, 0, 0, 852027, 0, 0, 917563, 0, 0, 983099, 0, 0, 1048635, 0, 0, 1114171, 0, 0, 1179707, 0, 0, 1245243, 0, 0, 1310779, 0, 0, 1376315, 0, 0, 1441851, 0, 0, 1507387, 0, 0, 1572923, 0, 0, 1638459, 0, 0, 1703995, 0, 0, 1769531, 0, 0, 1835067, 0, 0, 1900603, 0, 0, 1966139, 0, 0, 2031675, 0, 0, 2097211, 0, 0, 2162747, 0, 0, 2228283, 0, 0, 2293819, 0, 0, 2359355, 0, 0, 2424891, 0, 0, 2490427, 0, 0, 327740, 0, 0, 393276, 0, 0, 458812, 0, 0, 524348, 0, 0, 589884, 0, 0, 655420, 0, 0, 720956, 0, 0, 786492, 0, 0, 852028, 0, 0, 917564, 0, 0, 983100, 0, 0, 1048636, 0, 0, 1114172, 0, 0, 1179708, 0, 0, 1245244, 0, 0, 1310780, 0, 0, 1376316, 0, 0, 1441852, 0, 0, 1507388, 0, 0, 1572924, 0, 0, 1638460, 0, 0, 1703996, 0, 0, 1769532, 0, 0, 1835068, 0, 0, 1900604, 0, 0, 1966140, 0, 0, 2031676, 0, 0, 2097212, 0, 0, 2162748, 0, 0, 2228284, 0, 0, 2293820, 0, 0, 2359356, 0, 0, 2490428, 0, 0, 58, 0, 0, 65594, 0, 0, 131130, 0, 0, 196666, 0, 0, 262202, 0, 0, 59, 0, 0, 65595, 0, 0, 131131, 0, 0, 196667, 0, 0, 262203, 0, 0, 60, 0, 0, 65596, 0, 0, 131132, 0, 0, 196668, 0, 0, 262204, 0, 0, 2621441, 0, 0, 2621442, 0, 0, 2621443, 0, 0, 2621444, 0, 0, 2621445, 0, 0, 2621446, 0, 0, 2621447, 0, 0, 2621448, 0, 0, 2621449, 0, 0, 2621450, 0, 0, 2621451, 0, 0, 61, 1, 0, 65597, 1, 0, 131133, 1, 0, 196669, 1, 0, 262205, 1, 0, 327741, 1, 0, 393277, 1, 0, 458813, 1, 0, 524349, 1, 0, 589885, 1, 0, 655421, 1, 0, 720957, 1, 0, 786493, 1, 0, 852029, 1, 0, 917565, 1, 0, 983101, 1, 0, 1048637, 1, 0, 1114173, 1, 0, 1179709, 1, 0, 1245245, 1, 0, 1310781, 1, 0, 1376317, 1, 0, 1441853, 1, 0, 1507389, 1, 0, 1572925, 1, 0, 1638461, 1, 0, 1703997, 1, 0, 1769533, 1, 0, 1835069, 1, 0, 1900605, 1, 0, 1966141, 1, 0, 2031677, 1, 0, 2097213, 1, 0, 2162749, 1, 0, 2228285, 1, 0, 2293821, 1, 0, 2359357, 1, 0, 2424893, 1, 0, 2490429, 1, 0, 2555965, 1, 0, 62, 1, 0, 65598, 1, 0, 131134, 1, 0, 196670, 1, 0, 262206, 1, 0, 327742, 1, 0, 393278, 1, 0, 458814, 1, 0, 524350, 1, 0, 589886, 1, 0, 655422, 1, 0, 720958, 1, 0, 786494, 1, 0, 852030, 1, 0, 917566, 1, 0, 983102, 1, 0, 1048638, 1, 0, 1114174, 1, 0, 1179710, 1, 0, 1245246, 1, 0, 1310782, 1, 0, 1376318, 1, 0, 1441854, 1, 0, 1507390, 1, 0, 1572926, 1, 0, 1638462, 1, 0, 1703998, 1, 0, 1769534, 1, 0, 1835070, 1, 0, 1900606, 1, 0, 1966142, 1, 0, 2031678, 1, 0, 2097214, 1, 0, 2162750, 1, 0, 2228286, 1, 0, 2293822, 1, 0, 2359358, 1, 0, 2424894, 1, 0, 2490430, 1, 0, 2555966, 1, 0, 63, 1, 0, 65599, 1, 0, 131135, 1, 0, 196671, 1, 0, 262207, 1, 0, 327743, 1, 0, 393279, 1, 0, 458815, 1, 0, 524351, 1, 0, 589887, 1, 0, 655423, 1, 0, 720959, 1, 0, 786495, 1, 0, 852031, 1, 0, 917567, 1, 0, 983103, 1, 0, 1048639, 1, 0, 1114175, 1, 0, 1179711, 1, 0, 1245247, 1, 0, 1310783, 1, 0, 1376319, 1, 0, 1441855, 1, 0, 1507391, 1, 0, 1572927, 1, 0, 1638463, 1, 0, 1703999, 1, 0, 1769535, 1, 0, 1835071, 1, 0, 1900607, 1, 0, 1966143, 1, 0, 2031679, 1, 0, 2097215, 1, 0, 2162751, 1, 0, 2228287, 1, 0, 2293823, 1, 0, 2359359, 1, 0, 2424895, 1, 0, 2490431, 1, 0, 2555967, 1, 0, 64, 1, 0, 65600, 1, 0, 131136, 1, 0, 196672, 1, 0, 262208, 1, 0, 327744, 1, 0, 393280, 1, 0, 458816, 1, 0, 524352, 1, 0, 589888, 1, 0, 655424, 1, 0, 720960, 1, 0, 786496, 1, 0, 852032, 1, 0, 917568, 1, 0, 983104, 1, 0, 1048640, 1, 0, 1114176, 1, 0, 1179712, 1, 0, 1245248, 1, 0, 1310784, 1, 0, 1376320, 1, 0, 1441856, 1, 0, 1507392, 1, 0, 1572928, 1, 0, 1638464, 1, 0, 1704000, 1, 0, 1769536, 1, 0, 1835072, 1, 0, 1900608, 1, 0, 1966144, 1, 0, 2031680, 1, 0, 2097216, 1, 0, 2162752, 1, 0, 2228288, 1, 0, 2293824, 1, 0, 2359360, 1, 0, 2424896, 1, 0, 2490432, 1, 0, 2555968, 1, 0, 65, 1, 0, 65601, 1, 0, 131137, 1, 0, 196673, 1, 0, 262209, 1, 0, 327745, 1, 0, 393281, 1, 0, 458817, 1, 0, 524353, 1, 0, 589889, 1, 0, 655425, 1, 0, 720961, 1, 0, 786497, 1, 0, 852033, 1, 0, 917569, 1, 0, 983105, 1, 0, 1048641, 1, 0, 1114177, 1, 0, 1179713, 1, 0, 1245249, 1, 0, 1310785, 1, 0, 1376321, 1, 0, 1441857, 1, 0, 1507393, 1, 0, 1572929, 1, 0, 1638465, 1, 0, 1704001, 1, 0, 1769537, 1, 0, 1835073, 1, 0, 1900609, 1, 0, 1966145, 1, 0, 2031681, 1, 0, 2097217, 1, 0, 2162753, 1, 0, 2228289, 1, 0, 2293825, 1, 0, 2359361, 1, 0, 2424897, 1, 0, 2490433, 1, 0, 2555969, 1, 0, 66, 1, 0, 65602, 1, 0, 131138, 1, 0, 196674, 1, 0, 262210, 1, 0, 327746, 1, 0, 393282, 1, 0, 458818, 1, 0, 524354, 1, 0, 589890, 1, 0, 655426, 1, 0, 720962, 1, 0, 786498, 1, 0, 852034, 1, 0, 917570, 1, 0, 983106, 1, 0, 1048642, 1, 0, 1114178, 1, 0, 1179714, 1, 0, 1245250, 1, 0, 1310786, 1, 0, 1376322, 1, 0, 1441858, 1, 0, 1507394, 1, 0, 1572930, 1, 0, 1638466, 1, 0, 1704002, 1, 0, 1769538, 1, 0, 1835074, 1, 0, 1900610, 1, 0, 1966146, 1, 0, 2031682, 1, 0, 2097218, 1, 0, 2162754, 1, 0, 2228290, 1, 0, 2293826, 1, 0, 2359362, 1, 0, 2424898, 1, 0, 2490434, 1, 0, 2555970, 1, 0, 67, 1, 0, 65603, 1, 0, 131139, 1, 0, 196675, 1, 0, 262211, 1, 0, 327747, 1, 0, 393283, 1, 0, 458819, 1, 0, 524355, 1, 0, 589891, 1, 0, 655427, 1, 0, 720963, 1, 0, 786499, 1, 0, 852035, 1, 0, 917571, 1, 0, 983107, 1, 0, 1048643, 1, 0, 1114179, 1, 0, 1179715, 1, 0, 1245251, 1, 0, 1310787, 1, 0, 1376323, 1, 0, 1441859, 1, 0, 1507395, 1, 0, 1572931, 1, 0, 1638467, 1, 0, 1704003, 1, 0, 1769539, 1, 0, 1835075, 1, 0, 1900611, 1, 0, 1966147, 1, 0, 2031683, 1, 0, 2097219, 1, 0, 2162755, 1, 0, 2228291, 1, 0, 2293827, 1, 0, 2359363, 1, 0, 2424899, 1, 0, 2490435, 1, 0, 2555971, 1, 0, 68, 1, 0, 65604, 1, 0, 131140, 1, 0, 196676, 1, 0, 262212, 1, 0, 327748, 1, 0, 393284, 1, 0, 458820, 1, 0, 524356, 1, 0, 589892, 1, 0, 655428, 1, 0, 720964, 1, 0, 786500, 1, 0, 852036, 1, 0, 917572, 1, 0, 983108, 1, 0, 1048644, 1, 0, 1114180, 1, 0, 1179716, 1, 0, 1245252, 1, 0, 1310788, 1, 0, 1376324, 1, 0, 1441860, 1, 0, 1507396, 1, 0, 1572932, 1, 0, 1638468, 1, 0, 1704004, 1, 0, 1769540, 1, 0, 1835076, 1, 0, 1900612, 1, 0, 1966148, 1, 0, 2031684, 1, 0, 2097220, 1, 0, 2162756, 1, 0, 2228292, 1, 0, 2293828, 1, 0, 2359364, 1, 0, 2424900, 1, 0, 2490436, 1, 0, 2555972, 1, 0, 69, 1, 0, 65605, 1, 0, 131141, 1, 0, 196677, 1, 0, 262213, 1, 0, 327749, 1, 0, 393285, 1, 0, 458821, 1, 0, 524357, 1, 0, 589893, 1, 0, 655429, 1, 0, 720965, 1, 0, 786501, 1, 0, 852037, 1, 0, 917573, 1, 0, 983109, 1, 0, 1048645, 1, 0, 1114181, 1, 0, 1179717, 1, 0, 1245253, 1, 0, 1310789, 1, 0, 1376325, 1, 0, 1441861, 1, 0, 1507397, 1, 0, 1572933, 1, 0, 1638469, 1, 0, 1704005, 1, 0, 1769541, 1, 0, 1835077, 1, 0, 1900613, 1, 0, 1966149, 1, 0, 2031685, 1, 0, 2097221, 1, 0, 2162757, 1, 0, 2228293, 1, 0, 2293829, 1, 0, 2359365, 1, 0, 2424901, 1, 0, 2490437, 1, 0, 2555973, 1, 0, 70, 1, 0, 65606, 1, 0, 131142, 1, 0, 196678, 1, 0, 262214, 1, 0, 327750, 1, 0, 393286, 1, 0, 458822, 1, 0, 524358, 1, 0, 589894, 1, 0, 655430, 1, 0, 720966, 1, 0, 786502, 1, 0, 852038, 1, 0, 917574, 1, 0, 983110, 1, 0, 1048646, 1, 0, 1114182, 1, 0, 1179718, 1, 0, 1245254, 1, 0, 1310790, 1, 0, 1376326, 1, 0, 1441862, 1, 0, 1507398, 1, 0, 1572934, 1, 0, 1638470, 1, 0, 1704006, 1, 0, 1769542, 1, 0, 1835078, 1, 0, 1900614, 1, 0, 1966150, 1, 0, 2031686, 1, 0, 2097222, 1, 0, 2162758, 1, 0, 2228294, 1, 0, 2293830, 1, 0, 2359366, 1, 0, 2424902, 1, 0, 2490438, 1, 0, 2555974, 1, 0, 71, 1, 0, 65607, 1, 0, 131143, 1, 0, 196679, 1, 0, 262215, 1, 0, 327751, 1, 0, 393287, 1, 0, 458823, 1, 0, 524359, 1, 0, 589895, 1, 0, 655431, 1, 0, 720967, 1, 0, 786503, 1, 0, 852039, 1, 0, 917575, 1, 0, 983111, 1, 0, 1048647, 1, 0, 1114183, 1, 0, 1179719, 1, 0, 1245255, 1, 0, 1310791, 1, 0, 1376327, 1, 0, 1441863, 1, 0, 1507399, 1, 0, 1572935, 1, 0, 1638471, 1, 0, 1704007, 1, 0, 1769543, 1, 0, 1835079, 1, 0, 1900615, 1, 0, 1966151, 1, 0, 2031687, 1, 0, 2097223, 1, 0, 2162759, 1, 0, 2228295, 1, 0, 2293831, 1, 0, 2359367, 1, 0, 2424903, 1, 0, 2490439, 1, 0, 2555975, 1, 0, 57, 1, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 720909, 0, 0, 655373, 0, 0, 589837, 0, 0, 524301, 0, 0, 458765, 0, 0, 393229, 0, 0, 327693, 0, 0, 262157, 0, 0, 196621, 0, 0, 131085, 0, 0, 65549, 0, 0, 983058, 0, 0, 917522, 0, 0, 851986, 0, 0, 262166, 0, 0, 327702, 0, 0, 393238, 0, 0, 458774, 0, 0, 524310, 0, 0, 589846, 0, 0, 655382, 0, 0, 720918, 0, 0, 786454, 0, 0, 851990, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 589842, 0, 0, 524306, 0, 0, 458770, 0, 0, 393234, 0, 0, 327698, 0, 0, 262162, 0, 0, 65562, 0, 0, 131098, 0, 0, 196634, 0, 0, 262170, 0, 0, 327706, 0, 0, 393242, 0, 0, 458778, 0, 0, 524314, 0, 0, 589850, 0, 0, 851994, 0, 0, 917530, 0, 0, 851993, 0, 0, 851992, 0, 0, 851991, 0, 0, 262175, 0, 0, 262176, 0, 0, 262177, 0, 0, 262178, 0, 0, 262179, 0, 0, 851999, 0, 0, 786463, 0, 0, 720927, 0, 0, 655391, 0, 0, 589855, 0, 0, 524319, 0, 0, 327711, 0, 0, 393247, 0, 0, 458783, 0, 0, 917535, 0, 0, 983071, 0, 0, 983066, 0, 0, 458788, 0, 0, 458789, 0, 0, 458790, 0, 0, 458791, 0, 0, 458792, 0, 0, 458793, 0, 0, 458794, 0, 0, 458795, 0, 0, 262183, 0, 0, 327719, 0, 0, 393255, 0, 0, 65580, 0, 0, 131116, 0, 0, 196652, 0, 0, 262192, 0, 0, 327728, 0, 0, 393264, 0, 0, 458800, 0, 0, 524336, 0, 0, 589872, 0, 0, 852016, 0, 0, 917552, 0, 0, 983088, 0, 0, 524340, 0, 0, 589876, 0, 0, 655412, 0, 0, 720948, 0, 0, 786484, 0, 0, 852020, 0, 0, 917556, 0, 0, 983092, 0, 0, 1048628, 0, 0, 1114164, 0, 0, 1179700, 0, 0, 1245236, 0, 0, 1245232, 0, 0, 1245233, 0, 0, 1245234, 0, 0, 1245235, 0, 0, 1310768, 0, 0, 1376304, 0, 0, 1441840, 0, 0, 1507376, 0, 0, 1572912, 0, 0, 1638448, 0, 0, 655392, 0, 0, 655393, 0, 0, 655394, 0, 0, 655395, 0, 0, 655396, 0, 0, 655397, 0, 0, 655398, 0, 0, 655399, 0, 0, 720935, 0, 0, 786471, 0, 0, 852003, 0, 0, 917539, 0, 0, 983075, 0, 0, 1048611, 0, 0, 1114147, 0, 0, 1179683, 0, 0, 1245219, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1245210, 0, 0, 1245211, 0, 0, 1245212, 0, 0, 1245213, 0, 0, 1245214, 0, 0, 1245215, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245218, 0, 0, 1048598, 0, 0, 1114134, 0, 0, 1179670, 0, 0, 1507359, 0, 0, 1572895, 0, 0, 1310742, 0, 0, 1376278, 0, 0, 1441814, 0, 0, 1507350, 0, 0, 1572886, 0, 0, 1245223, 0, 0, 1310759, 0, 0, 1376295, 0, 0, 1441831, 0, 0, 1507367, 0, 0, 1572903, 0, 0, 1638439, 0, 0, 1638436, 0, 0, 1638437, 0, 0, 1638438, 0, 0, 1835030, 0, 0, 1835031, 0, 0, 1835032, 0, 0, 1835033, 0, 0, 1835034, 0, 0, 1835035, 0, 0, 1835036, 0, 0, 1835037, 0, 0, 1835038, 0, 0, 1835039, 0, 0, 1835040, 0, 0, 1835041, 0, 0, 1835042, 0, 0, 1835043, 0, 0, 1835044, 0, 0, 1835045, 0, 0, 1835046, 0, 0, 1835047, 0, 0, 1900566, 0, 0, 1966102, 0, 0, 2031638, 0, 0, 1835026, 0, 0, 1900562, 0, 0, 1966098, 0, 0, 2031634, 0, 0, 2097170, 0, 0, 2162706, 0, 0, 2228242, 0, 0, 2293778, 0, 0, 2359314, 0, 0, 2424850, 0, 0, 1835022, 0, 0, 1835023, 0, 0, 1835024, 0, 0, 1835025, 0, 0, 1310733, 0, 0, 1376269, 0, 0, 1441797, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1507337, 0, 0, 1572873, 0, 0, 1638409, 0, 0, 1638410, 0, 0, 1638411, 0, 0, 1638412, 0, 0, 1638413, 0, 0, 1638414, 0, 0, 1638415, 0, 0, 1638416, 0, 0, 1638417, 0, 0, 1441810, 0, 0, 1507346, 0, 0, 1572882, 0, 0, 1638418, 0, 0, 1441845, 0, 0, 1441846, 0, 0, 1441847, 0, 0, 1441848, 0, 0, 1638449, 0, 0, 1638450, 0, 0, 1638451, 0, 0, 1638452, 0, 0, 1703988, 0, 0, 1769524, 0, 0, 1835060, 0, 0, 1900596, 0, 0, 1966132, 0, 0, 2228263, 0, 0, 2228264, 0, 0, 2228265, 0, 0, 2228266, 0, 0, 2228267, 0, 0, 2228268, 0, 0, 2228269, 0, 0, 2228270, 0, 0, 2228271, 0, 0, 2228272, 0, 0, 2228273, 0, 0, 2228274, 0, 0, 2228275, 0, 0, 2228276, 0, 0, 2031655, 0, 0, 2031656, 0, 0, 2031657, 0, 0, 2031658, 0, 0, 2031659, 0, 0, 1900583, 0, 0, 1966119, 0, 0, 2097191, 0, 0, 2162727, 0, 0, 2293799, 0, 0, 2359335, 0, 0, 2424867, 0, 0, 2424868, 0, 0, 2424869, 0, 0, 2424870, 0, 0, 2424871, 0, 0, 2293795, 0, 0, 2359331, 0, 0, 2228255, 0, 0, 2293791, 0, 0, 2359327, 0, 0, 2424863, 0, 0, 2490399, 0, 0, 2555935, 0, 0, 2228246, 0, 0, 2228247, 0, 0, 2228248, 0, 0, 2228249, 0, 0, 2228250, 0, 0, 2031642, 0, 0, 2097178, 0, 0, 2162714, 0, 0, 2031643, 0, 0, 2031644, 0, 0, 2031645, 0, 0, 2031646, 0, 0, 2031647, 0, 0, 2031648, 0, 0, 2031649, 0, 0, 2031650, 0, 0, 2031651, 0, 0, 2424851, 0, 0, 2424852, 0, 0, 2424853, 0, 0, 2424854, 0, 0, 2424855, 0, 0, 2424856, 0, 0, 2424857, 0, 0, 2424858, 0, 0, 2424876, 0, 0, 2424877, 0, 0, 2424878, 0, 0, 2424879, 0, 0, 2424880, 0, 0, 2424881, 0, 0, 2424882, 0, 0, 2424883, 0, 0, 2424884, 0, 0, 2424885, 0, 0, 2424886, 0, 0, 2424887, 0, 0, 2424888, 0, 0, 1638405, 0, 0, 1703941, 0, 0, 1769477, 0, 0, 1835013, 0, 0, 1835014, 0, 0, 1835015, 0, 0, 1835016, 0, 0, 1835017, 0, 0, 1900553, 0, 0, 1966089, 0, 0, 2031625, 0, 0, 2097161, 0, 0, 2162697, 0, 0, 2228233, 0, 0, 2293769, 0, 0, 2359305, 0, 0, 2031626, 0, 0, 2031627, 0, 0, 2031628, 0, 0, 2031629, 0, 0, 2097165, 0, 0, 2162701, 0, 0, 2228237, 0, 0, 2293773, 0, 0, 2359309, 0, 0, 458796, 0, 0, 524332, 0, 0, 589868, 0, 0, 655404, 0, 0, 720940, 0, 0, 786476, 0, 0, 852012, 0, 0, 917548, 0, 0, 983084, 0, 0, 1048620, 0, 0, 1114156, 0, 0, 1179692, 0, 0, 1245228, 0, 0, 1310764, 0, 0, 1376300, 0, 0, 1441836, 0, 0, 1507372, 0, 0, 1572908, 0, 0, 1835052, 0, 0, 1835053, 0, 0, 1835054, 0, 0, 1835055, 0, 0, 1835056, 0, 0, 1900592, 0, 0, 1966128, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 52, 0, 0, 53, 0, 0, 54, 0, 0, 55, 0, 0, 56, 0, 0, 0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 851968, 0, 0, 917504, 0, 0, 983040, 0, 0, 1048576, 0, 0, 1114112, 0, 0, 1179648, 0, 0, 1245184, 0, 0, 1310720, 0, 0, 1376256, 0, 0, 1441792, 0, 0, 1507328, 0, 0, 1572864, 0, 0, 1638400, 0, 0, 1703936, 0, 0, 1769472, 0, 0, 1835008, 0, 0, 1900544, 0, 0, 1966080, 0, 0, 2031616, 0, 0, 2097152, 0, 0, 2162688, 0, 0, 2228224, 0, 0, 2293760, 0, 0, 2359296, 0, 0, 2424832, 0, 0, 2490368, 0, 0, 2555904, 0, 0, 2621440, 0, 0, 65593, 0, 0, 131129, 0, 0, 196665, 0, 0, 262201, 0, 0, 327737, 0, 0, 393273, 0, 0, 458809, 0, 0, 524345, 0, 0, 589881, 0, 0, 655417, 0, 0, 720953, 0, 0, 786489, 0, 0, 852025, 0, 0, 917561, 0, 0, 983097, 0, 0, 1048633, 0, 0, 1114169, 0, 0, 1179705, 0, 0, 1245241, 0, 0, 1310777, 0, 0, 1376313, 0, 0, 1441849, 0, 0, 1507385, 0, 0, 1572921, 0, 0, 1638457, 0, 0, 1703993, 0, 0, 1769529, 0, 0, 1835065, 0, 0, 1900601, 0, 0, 1966137, 0, 0, 2031673, 0, 0, 2097209, 0, 0, 2162745, 0, 0, 2228281, 0, 0, 2293817, 0, 0, 2359353, 0, 0, 2424889, 0, 0, 2490425, 0, 0, 2555961, 0, 0, 720908, 0, 0, 720907, 0, 0, 720906, 0, 0, 720905, 0, 0, 720904, 0, 0, 720903, 0, 0, 720902, 0, 0, 720901, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 983057, 0, 0, 983056, 0, 0, 983055, 0, 0, 983054, 0, 0, 983053, 0, 0, 983052, 0, 0, 983051, 0, 0, 983050, 0, 0, 983049, 0, 0, 983048, 0, 0, 983047, 0, 0, 983046, 0, 0, 983045, 0, 0, 720900, 0, 0, 655364, 0, 0, 589828, 0, 0, 524292, 0, 0, 983044, 0, 0, 1572887, 0, 0, 1572888, 0, 0, 1572889, 0, 0, 1572890, 0, 0, 1572891, 0, 0, 1572892, 0, 0, 1572893, 0, 0, 1572894, 0, 0, 2359304, 0, 0, 2359303, 0, 0, 2359302, 0, 0, 2359301, 0, 0, 2097153, 0, 0, 2097154, 0, 0, 2097155, 0, 0, 2097156, 0, 0)

[node name="Button" parent="." instance=ExtResource("9_ikh3n")]
position = Vector2(184, 544)

[node name="MainCharacter" parent="." instance=ExtResource("2_ursjo")]
position = Vector2(48.0001, 40.0001)
scale = Vector2(0.8, 0.8)

[node name="Enemy" parent="." instance=ExtResource("3_bl41b")]
position = Vector2(424, 360)
scale = Vector2(1.89894, 1.89894)

[node name="Cheese" parent="." instance=ExtResource("4_d6dvr")]
position = Vector2(864, 624)

[node name="Light_Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Darkness_Timer" type="Timer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -32.0
offset_top = -16.0
offset_right = 43.0
offset_bottom = 26.0
scale = Vector2(16.1157, 16.1157)
color = Color(1, 1, 1, 0)

[connection signal="timeout" from="Light_Timer" to="." method="_on_light_timer_timeout"]
[connection signal="timeout" from="Darkness_Timer" to="." method="_on_darkness_timer_timeout"]
